agregado ejercicio auto

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <p id="rotulo2">descuento</p>
     <input type="text" id="dato2" value="" />
     <button id="btnEnviar">Enviar</button>
+    <h2>Tiempos de vueltas</h2>
+    <p>vuelta1</p>
+    <input type="text" id="vuelta1" value="" />
+    <p>vuelta2</p>
+    <input type="text" id="vuelta2" value="" />
+    <p>vuelta3</p>
+    <input type="text" id="vuelta3" value="" />
+    <p>vuelta4</p>
+    <input type="text" id="vuelta4" value="" />
+    <br />
+    <button id="btnTiempos">Enviar</button>
+
     <script src="src/datos.ts"></script>
   </body>
 </html>
