--- a/index.html
+++ b/index.html
@@ -22,7 +22,34 @@
     <input type="text" id="vuelta4" value="" />
     <br />
     <button id="btnTiempos">Enviar</button>
+    <br />
+    <br />
+    <h2>Estructura de datos</h2>
+    <h3>Ejercicio mayor de tres</h3>
+    <div>
+      <input
+        type="number"
+        placeholder="Introduce un numero"
+        id="segundoNumero"
+      />
+      <input
+        type="number"
+        placeholder="Introduce un numero"
+        id="tercerNumero"
+      />
+      <input
+        type="number"
+        placeholder="Introduce un numero"
+        id="primerNumero"
+      />
+      <button id="btnCalcMayor">Calcular</button>
+    </div>
+
+    <h3>Ejercicio par/impar</h3>
+    <h3>Ejercicio descuento Octubre</h3>
+    <h3>Ejercicio Aumento de sueldo</h3>
 
     <script src="src/datos.ts"></script>
+    <script src="src/mayor_de_tres.ts"></script>
   </body>
 </html>
