--- a/index.html
+++ b/index.html
@@ -46,10 +46,19 @@
     </div>
 
     <h3>Ejercicio par/impar</h3>
+    <input
+      type="number"
+      value=""
+      placeholder="ingrese un numero"
+      id="parOImpar"
+    />
+    <button id="btnParImpar">Calcular</button>
+
     <h3>Ejercicio descuento Octubre</h3>
     <h3>Ejercicio Aumento de sueldo</h3>
 
     <script src="src/datos.ts"></script>
     <script src="src/mayor_de_tres.ts"></script>
+    <script src="src/par_o_impar.ts"></script>
   </body>
 </html>
