--- a/index.html
+++ b/index.html
@@ -82,5 +82,6 @@
     <script src="src/par_o_impar.ts"></script>
     <script src="src/descuento_octubre.ts"></script>
     <script src="src/aumento_sueldos.ts"></script>
+    <script src="src/multiplos.ts"></script>
   </body>
 </html>
